# simple-pi-os

./: CMakeLists.txt  README.md
firmware/: config.txt  start.elf
pi-side/: CMakeLists.txt
pi-side/bootloader/: CMakeLists.txt  bootloader.c  memmap  simple-boot.h  start.s
pi-side/kernel/: CMakeLists.txt  arm-coprocessor-insts.h  control.c  control.h  elf.c  elf.h  exec.c  exec.h  interrupts-asm.S  interrupts.c  interrupts.h  layout.h  loader.c  process.h  rpi-thread.c  sd-card.c  sd-card.h  shell.c  shell.h  syscall.c  syscall.h  thread-asm.s  thread-test.c  vm-asm.S  vm.c  vm.h
pi-side/kernel/disk/: fat32-helpers.c  fat32.h  fs.c  fs.h  platform.c  platform.h  sd.c  sd.h  unicode-utf8.c  unicode-utf8.h
pi-side/libpi/: CMakeLists.txt  crc32.c  gpio.c  gpio.h  kmalloc.c  math.c  my-gpio.c  printf.c  rpi.h  start.s  stdlib.c  syscall.c  syscall.h  syscall.s  timer.c  uart.c
pi-side/usr/: CMakeLists.txt
pi-side/usr/blink/: CMakeLists.txt  blink.c
pi-side/usr/hello/: CMakeLists.txt  hello.c
unix-side/: CMakeLists.txt  my-install.c  simple-boot.c
unix-side/fs/: CMakeLists.txt  echo-until.c  fs-support.c  fs.c  fs.h  redirect.c
unix-side/install/: CMakeLists.txt  install.c  tty.c
unix-side/shell/: CMakeLists.txt  shell-support.c  shell.c  shell.h
unix-side/support/: CMakeLists.txt  demand.h  simple-boot.h  support.c  trace.c
